--- a/index.html
+++ b/index.html
@@ -117,13 +117,30 @@
           <div class="card-header">Simplemente Algo!</div>
           <div class="card-body">
             <h5 class="card-title">Audio-Novela Interactiva</h5>
-            <p class="card-text">Esta novela esta desarrollada en HTML, Bootstrap y JavaScript. Co-escrita con ChatGPT
-              para dar un acabado mas realista a la aplicación.</p>
+            <p class="card-text">Esta novela está en desarrollo. Utilicé HTML, Bootstrap y JavaScript. Co-escrita con
+              ChatGPT para dar un acabado mas realista a la aplicación.</p>
             <div class="cardEnlaces">
-              <a href="https://github.com/Xzoun/Simplemente-Algo#readme" target="_blank">
+              <a href="https://github.com/Xzoun/Simplemente-Algo" target="_blank">
                 <div class="cardRoundImage"><img class="cardImg" src="./imagenes/gitHub.png" alt="GitHub Logo"></div>
               </a>
               <a href="https://simplementealgo-justsomething.web.app/" target="_blank">
+                <div class="cardRoundImage"><img class="cardImg" src="./imagenes/link.png" alt="Link Logo"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card border-light mb-3" style="max-width: 18rem;">
+          <div class="card-header">Balloon Playground!</div>
+          <div class="card-body">
+            <h5 class="card-title">Juegos Multijugador</h5>
+            <p class="card-text">Esta app de videojuegos está en desarrollo, utilicé React, Bootstrap Y Firebase.
+              Diversión garantizada para disfrutar con amigos o desconocidos.</p>
+            <div class="cardEnlaces">
+              <a href="https://github.com/Xzoun/lets-play-togheter" target="_blank">
+                <div class="cardRoundImage"><img class="cardImg" src="./imagenes/gitHub.png" alt="GitHub Logo"></div>
+              </a>
+              <a href="https://balloon-playground.web.app/" target="_blank">
                 <div class="cardRoundImage"><img class="cardImg" src="./imagenes/link.png" alt="Link Logo"></div>
               </a>
             </div>
@@ -148,7 +165,8 @@
           <a href="https://github.com/Xzoun/Full-Stack-4.0#readme" target="_blank" class="link-dark">
             <img src="./imagenes/gitHub.png" alt="GitHub Logo" class="logoEduc"></a>
           <a href="https://xzoun.github.io/Guia-FrontEnd/" target="_blank" class="link-dark">
-            <img src="./imagenes/link.png" alt="Link Logo" class="logoEduc"> <span class="guiaEduc">Guia FrontEnd</span></a>
+            <img src="./imagenes/link.png" alt="Link Logo" class="logoEduc"> <span class="guiaEduc">Guia
+              FrontEnd</span></a>
         </div>
 
         <div>
@@ -209,7 +227,7 @@
           <h2>SQL</h2>
           <img src="./imagenes/SQL.png" alt="logo SQL">
         </div>
-        <div class="skillUp">        
+        <div class="skillUp">
           <img src="./imagenes/React.png" alt="logo React">
           <h2>React</h2>
         </div>
