--- a/rutas/v1.html
+++ b/rutas/v1.html
@@ -16,7 +16,8 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark " data-bs-theme="dark" id="nav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><img class="logoPersonal" src="../Imagenes/Perfil/LeBenitez!.png" alt=""></a>
+      <a class="navbar-brand" href="./v2/v2.html"><img class="logoPersonal" src="../Imagenes/Perfil/LeBenitez!.png"
+          alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,7 +43,8 @@
       </div>
     </div>
   </nav>
-  <button id="darkMode"> <img src="../Imagenes/v1/darkMode.png" id="lunaIcono" alt="icono Luna DarkMode"> DarkMode</button>
+  <button id="darkMode"> <img src="../Imagenes/v1/darkMode.png" id="lunaIcono" alt="icono Luna DarkMode">
+    DarkMode</button>
   <div data-aos="fade-up" class="generalHor">
 
     <div id="presentacion" class="contenedor"></div>
@@ -104,7 +106,8 @@
               app de notas integrada y también varios proyectos anteriores. No olvides dejar un comentario!</p>
             <div class="cardEnlaces">
               <a href="https://github.com/Xzoun/Herramienta-de-Desarrollo" target="_blank">
-                <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/tecnologias/gitHub.png" alt="GitHub logo"></div>
+                <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/tecnologias/gitHub.png"
+                    alt="GitHub logo"></div>
               </a>
               <a href="https://herramienta-de-desarrollo.web.app/" target="_blank">
                 <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/v1/link.png" alt="Link Logo"></div>
@@ -121,7 +124,8 @@
               ChatGPT para dar un acabado mas realista a la aplicación.</p>
             <div class="cardEnlaces">
               <a href="https://github.com/Xzoun/Simplemente-Algo" target="_blank">
-                <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/tecnologias/gitHub.png" alt="GitHub Logo"></div>
+                <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/tecnologias/gitHub.png"
+                    alt="GitHub Logo"></div>
               </a>
               <a href="https://simplementealgo-justsomething.web.app/" target="_blank">
                 <div class="cardRoundImage"><img class="cardImg" src="../Imagenes/v1/link.png" alt="Link Logo"></div>
@@ -271,7 +275,6 @@
       </div>
     </div>
   </div>
-
   <footer data-aos="fade-up" data-aos-duration="3000">
     <div id="contacto" class="contenedor"></div>
     <h3 class="fondo">Para facilitar la comunicación, te invito a utilizar los siguientes enlaces de contacto.</h3>
@@ -285,7 +288,7 @@
       </a>
       <a href="https://api.whatsapp.com/send/?phone=541136719834&text&type=phone_number&app_absent=0" target="_blank">
         <div class="roundIcon"><img class="iconImage" id="whatsAppIcon" src="../Imagenes/redes/WhatsApp.png""
-            alt="WhatsApp Logo">
+            alt=" WhatsApp Logo">
         </div>
       </a>
     </div>
