--- a/rutas/v2/v2.html
+++ b/rutas/v2/v2.html
@@ -7,6 +7,8 @@
     <title>LeBenitez | Desarrollador</title>
     <link rel="icon" href="../../Imagenes/Perfil/LeBenitez!.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../Css/v2/portfolio.css">
+    <link rel="stylesheet" href="../../Css/v2/controlador.css">
+    <link rel="stylesheet" href="../../Css/v2/skills.css">
 </head>
 
 <body>
@@ -14,7 +16,7 @@
 
     <div id="start">
 
-        <div class="sector">
+        <div class="home" id="home">
             <h2>Proyectos</h2>
 
             <div class="general" id="proyectos">
@@ -52,8 +54,114 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+
+            <div id="v1"><a href="../v1.html">Portfolio V.1</a></div>
+        </div>
+
+        <div class="sector" id="skills">
+            <div class="animacionSector">
+                <h2>Skills</h2>
+                <div class="general skills">
+                    <h3>Tecnologías</h3>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/JavaScript.png" alt="logo JavaScript">
+                        <h2>JavaScript</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/Java.png" alt="logo Java">
+                        <h2>JAVA</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/SQL.png" alt="logo SQL">
+                        <h2>SQL</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/CSS3.png" alt="logo Css">
+                        <h2>CSS</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/HTML5.png" alt="logo Html">
+                        <h2>HTML</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/bootstrap.png" alt="logo Bootstrap">
+                        <h2>Bootstrap</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/firebase.png" alt="logo Firebase">
+                        <h2>Firebase</h2>
+                    </div>
+                    <div class="skill">
+                        <img src="../../Imagenes/tecnologias/React.png" alt="logo React">
+                        <h2>React</h2>
+                    </div>
+                </div>
+
+                <div id="otrasSkills" class="general">
+
+                    <div class="otrasSkills">
+                        <h3>Idiomas</h3>
+                        <div class="otraSkill">
+                            <img src="../../Imagenes/idiomas/argentina.png" alt="bandera Argentina">
+                            <h4>Español | Nativo</h4>
+                        </div>
+                        <div class="otraSkill">
+                            <img src="../../Imagenes/idiomas/estados unidos.png" alt="bandera Yankee">
+                            <h4>Inglés | A2</h4>
+                        </div>
+                        <div class="otraSkill">
+                            <img src="../../Imagenes/idiomas/francia.png" alt="bandera Francia">
+                            <h4>Francés | B2</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="otrasSkills">
+                            <h3>Diseño</h3>
+                            <div class="otraSkill">
+                                <img src="../../Imagenes/diseño/gimp.png" alt="logo Gimp">
+                                <h4>Gimp</h4>
+                            </div>
+                            <div class="otraSkill">
+                                <img src="../../Imagenes/diseño/inkscape.png" alt="logo InkScape">
+                                <h4>InkScape</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sector" id="sobreMi">
+                <div class="animacionSector">
+                    <h2>Sobre mi</h2>
+                    <div class="general">
+                        <h3>asdfsdfsd</h3>
+                        <h3>sdfsdfsd</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sector" id="estudios">
+                <div class="animacionSector">
+                    <h2>Estudios</h2>
+                    <div class="general">
+                        <h3>asdfsdfsd</h3>
+                        <h3>sdfsdfsd</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sector" id="contacto">
+                <div class="animacionSector">
+                    <h2>Contacto</h2>
+                    <div class="general">
+                        <h3>asdfsdfsd</h3>
+                        <h3>sdfsdfsd</h3>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ----------- Elemntos con posición específica ----------- -->
             <audio id="hddAudio" class="audioProject">
                 <source type="audio/mp3" src="../../Audios/herramientaDeDesarrollo.m4a">
             </audio>
@@ -70,17 +178,29 @@
                 tomar decisiones por los protagonistas de la historia.
                 Actualmente se encuentra en desarrollo.
             </h5>
+
+            <div id="controlador">
+                <a href="#" class="logo"><img src="../../Imagenes/v2/controlador/home.png" alt="Home - icono casa"><span
+                        class="span">Inicio</span></a>
+                <h2>|</h2>
+                <a href="#skills" class="logo"><img src="../../Imagenes/v2/controlador/skills.png"
+                        alt="Skills - icono boost"><span class="span">Skills</span></a>
+                <h2>|</h2>
+                <a href="#sobreMi" class="logo"><img src="../../Imagenes/v2/controlador/perfil.png"
+                        alt="Sobre mi - icono perfil"><span class="span">Sobre mi</span></a>
+                <h2>|</h2>
+                <a href="#estudios" class="logo"><img src="../../Imagenes/v2/controlador/educacion.png"
+                        alt="Estudios - icono libro"><span class="span">Estudios</span></a>
+                <h2>|</h2>
+                <a href="#contacto" class="logo"><img src="../../Imagenes/v2/controlador/contacto.png"
+                        alt="Contacto - icono teléfono"><span class="span">Contacto</span></a>
+            </div>
+
         </div>
-
-        <div class="sector">
-            <h2>Sobre mi</h2>
-            <div class="general" id="proyectos"> </div>
-        </div>
-
-
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="../../JavaScript/v2/portfolio.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
+        <script src="../../JavaScript/v2/portfolio.js"></script>
 </body>
 
 </html>
