--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="./JavaScript/v2/efectoFondo.js"></script>
-    <script src="./JavaScript/v2/efectos.js"></script>
+    <script src="./JavaScript/v2/index.js"></script>
 </body>
 
 </html>
